tests/compile-fail/stacked_borrows/illegal_read6.stderr
error: Undefined Behavior: attempting a read access using <untagged> at alloc953[0x0], but that tag does not exist in the borrow stack for this location
 --> $DIR/illegal_read6.rs:7:16
  |
7 |     let _val = *raw; //~ ERROR borrow stack
  |                ^^^^
  |                |
  |                attempting a read access using <untagged> at alloc953[0x0], but that tag does not exist in the borrow stack for this location
  |                this error occurs as part of an access at alloc953[0x0..0x4]
  |
  = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
  = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
          
  = note: inside `main` at $DIR/illegal_read6.rs:7:16

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

